--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -2,7 +2,7 @@ name: contoso-traders-cloud-testing
 
 on:
   workflow_dispatch:
-  push:
+  pull_request:
     branches: ["main"]
     paths-ignore: ["docs/**", "demo-scripts/**"]
 
