devops: trigger on main pushes tests as well

--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -2,6 +2,8 @@ name: contoso-traders-cloud-testing
 
 on:
   workflow_dispatch:
+  push:
+    branches: ["main"]
   pull_request:
     branches: ["main"]
     paths-ignore: ["docs/**", "demo-scripts/**"]
