prep to incorporate load test with AAD

--- a/.azurepipelines/contoso-traders-cloud-testing.yml
+++ b/.azurepipelines/contoso-traders-cloud-testing.yml
@@ -9,7 +9,7 @@ pr:
       - main
   paths:
     exclude:
-      - "docs/**" 
+      - "docs/**"
       - "demo-scripts/**"
 
 variables:
@@ -673,6 +673,48 @@ stages:
               azureSubscription: SERVICEPRINCIPAL
               # Path of the YAML file. Should be fully qualified path or relative to the default working directory
               loadtestConfigFile: ./loadtests/contoso-traders-carts.yaml
+              resourceGroup: $(RESOURCE_GROUP_NAME)$(SUFFIX)
+              loadtestResource: $(LOAD_TEST_SERVICE_NAME)$(SUFFIX)
+              env: |
+                [
+                  {
+                    "name": "domain",
+                    "value": "$(cartsApiEndpoint)"
+                  },
+                  {
+                    "name": "protocol",
+                    "value": "https"
+                  },
+                  {
+                    "name": "path",
+                    "value": "v1/ShoppingCart/loadtest"
+                  },
+                  {
+                    "name": "threads_per_engine",
+                    "value": "5"
+                  },
+                  {
+                    "name": "ramp_up_time",
+                    "value": "0"
+                  },
+                  {
+                    "name": "duration_in_sec",
+                    "value": "120"
+                  }
+                ]
+
+      - job: load_tests_carts_api_aad
+        dependsOn: [provision, playwright_tests_ui]
+        variables:
+          cartsApiEndpoint: $[ dependencies.provision.outputs['getCartsApiEndpoint.cartsApiEndpoint'] ]
+        steps:
+          - task: AzureLoadTest@1
+            displayName: load test with AAD login (carts API)
+            condition: and(ne(variables['AADUSERNAME'], ''), ne(variables['AADPASSWORD'], ''))
+            inputs:
+              azureSubscription: SERVICEPRINCIPAL
+              # Path of the YAML file. Should be fully qualified path or relative to the default working directory
+              loadtestConfigFile: ./loadtests/contoso-traders-carts-aad.yaml
               resourceGroup: $(RESOURCE_GROUP_NAME)$(SUFFIX)
               loadtestResource: $(LOAD_TEST_SERVICE_NAME)$(SUFFIX)
               env: |
