--- a/.github/workflows/contoso-traders-cloud-testing.yml
+++ b/.github/workflows/contoso-traders-cloud-testing.yml
@@ -644,11 +644,11 @@ jobs:
             [
               {
                 "name": "username"
-                "value": "${{ env.AADUSERNAME }}"
+                "value": "${{ secrets.AADUSERNAME }}"
               },
               {
                 "name": "password"
-                "value": "${{ env.AADPASSWORD }}"
+                "value": "${{ secrets.AADPASSWORD }}"
               }
             ]
           env: |
